i18n and headers
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@14882 a97e2381-89e5-4abb-bab3-167db6db766c